--- a/installation/upgrading.html
+++ b/installation/upgrading.html
@@ -21,7 +21,7 @@ next_section: troubleshooting
             <p>Upgrading Ghost is super straightforward.</p>
             <p>There is a couple of different ways you might want to go about it. The following describes what needs to happen, and then covers the process step-by-step for both doing it <a href="#how-to">point-and-click style</a> and via a <a href="#cli">command line</a>, so that you are free to choose the method you are most comfortable with.</p>
 
-            <p class="note"><strong>Warning:</strong> You should always perform a backup before upgrading. Read the <a href="#backing-up">backup instructions</a> before doing anything else!</p>
+            <p class="note"><strong>Back-it-up!</strong> Always perform a backup before upgrading. Read the <a href="#backing-up">backup instructions</a> first!</p>
 
             <h2>Overview</h2>
 
@@ -46,18 +46,13 @@ next_section: troubleshooting
 
             <h2 id="how-to">How to Upgrade</h2>
 
-            <p class="warn"><strong>WARNING:</strong> Do <strong>NOT</strong> copy and paste the entire Ghost folder over the top of an existing installation on mac. Do <strong>NOT</strong> choose <kbd>REPLACE</kbd> if uploading with Transmit or other FTP software, choose <strong>MERGE</strong>.</p>
+            <p>How to upgrade on your local machine</p>
 
-            <!--<ul>-->
-                <!--<li>Download the latest version of Ghost from <a href="http://ghost.org/download/">Ghost.org</a></li>-->
-                <!--<li>Extract the .zip file</li>-->
-                <!--<li>If you are on Windows, you are safe to copy and paste all new files over the top of the old files. Windows will merge them for you.</li>-->
-                <!--<li>If you'd rather be safe than sorry</li>-->
-            <!--</ul>-->
+            <p class="warn"><strong>WARNING:</strong> Do <strong>NOT</strong> copy and paste the entire Ghost folder over the top of an existing installation on mac. Do <strong>NOT</strong> choose <kbd>REPLACE</kbd> if uploading with Transmit or other FTP software, choose <strong>MERGE</strong>.</p>
 
             <ul>
                 <li>Download the latest version of Ghost from <a href="http://ghost.org/download/">Ghost.org</a></li>
-                <li>Either extract the zip file locally, or into a temporary directory on your server</li>
+                <li>Extract the zip file to a temporary location</li>
                 <li>Copy all of the root level files from the latest version. This includes: index.js, package.json, Gruntfile.js, config.example.js, the license and readme files.</li>
                 <li>Next replace the old <code class="path">core</code> directory with the new <code class="path">core</code> directory</li>
                 <li>For releases which include update to Casper (the default theme), replace the old <code class="path">content/themes/casper</code> directory with the new one</li>
@@ -66,33 +61,46 @@ next_section: troubleshooting
             </ul>
 
 
+            <h2 id="cli">Command line only</h2>
 
-            <h2 id="cli">Upgrade with Command line only on mac</h2>
+            <p class="note"><strong>Back-it-up!</strong> Always perform a backup before upgrading. Read the <a href="#backing-up">backup instructions</a> first!</p>
+
+            <h3 id="cli-mac">Command line only on mac</h3>
 
             <p>The screencast below shows the steps for upgrading Ghost where the zip file has been downloaded to <code class="path">~/Downloads</code> and Ghost is installed in <code class="path">~/ghost</code> <span class="note"><strong>Note:</strong> <code>~</code> means the user's home directory on mac and linux</span></p>
 
             <img src="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/upgrade-ghost.gif" width="100%" />
 
             <p>The steps in the screencast are:
-            <ul>
-                <li><code class="path">cd ~/Downloads</code> - change directory to the Downloads directory where the latest version of Ghost has been saved</li>
-                <li><code>unzip ghost-0.3.1.zip -d ghost-0.3.3</code> - unzip ghost into the folder <code class="path">ghost-0.3.3</code></li>
-                <li><code class="path">cd ghost-0.3.3</code> - change directory into the <code class="path">ghost-0.3.3</code> directory</li>
-                <li><code>ls</code> - show all the files and folders inside this directory</li>
-                <li><code>cp *.md *.js *.txt *.json ~/ghost</code> - copy all .md .js .txt and .json files from this location to <code class="path">~/ghost</code></li>
-                <li><code>cp -R core ~/ghost</code> - copy the <code>core</code> directory and all of its contents to the <code class="path">~/ghost</code></li>
-                <li><code>cp -R content/themes/casper ~/ghost/content/themes</code> - copy the <code class="path">casper</code> directory and all of its contents to <code class="path">~/ghost/content/themes</code></li>
-                <li><code>cd ~/ghost</code> - change directory to the <code class="path">~/ghost</code> directory</li>
-                <li><code>npm install --production</code> - install Ghost</li>
-                <li><code>npm start</code> - start Ghost</li>
-            </ul>
+                <ul>
+                    <li><code class="path">cd ~/Downloads</code> - change directory to the Downloads directory where the latest version of Ghost has been saved</li>
+                    <li><code>unzip ghost-0.3.1.zip -d ghost-0.3.3</code> - unzip ghost into the folder <code class="path">ghost-0.3.3</code></li>
+                    <li><code class="path">cd ghost-0.3.3</code> - change directory into the <code class="path">ghost-0.3.3</code> directory</li>
+                    <li><code>ls</code> - show all the files and folders inside this directory</li>
+                    <li><code>cp *.md *.js *.txt *.json ~/ghost</code> - copy all .md .js .txt and .json files from this location to <code class="path">~/ghost</code></li>
+                    <li><code>cp -R core ~/ghost</code> - copy the <code>core</code> directory and all of its contents to the <code class="path">~/ghost</code></li>
+                    <li><code>cp -R content/themes/casper ~/ghost/content/themes</code> - copy the <code class="path">casper</code> directory and all of its contents to <code class="path">~/ghost/content/themes</code></li>
+                    <li><code>cd ~/ghost</code> - change directory to the <code class="path">~/ghost</code> directory</li>
+                    <li><code>npm install --production</code> - install Ghost</li>
+                    <li><code>npm start</code> - start Ghost</li>
+                </ul>
             </p>
+
+            <h3 id="cli-server">Command line only on linux servers</h3>
+
+            <ul>
+                <li>First you'll need to find out the URL of the latest Ghost version. It should be something like <code>http://ghost.org/zip/ghost-latest.zip</code>.</li>
+                <li>Fetch the zip file with <code>wget http://ghost.org/zip/ghost-latest.zip</code> (or whatever the URL for the latest Ghost version is).</li>
+                <li>Unzip the archive with <code>unzip -uo ghost-0.3.*.zip -d path-to-your-ghost-install</code></li>
+                <li>Run <code>npm install --production</code> to get any new dependencies</li>
+                <li>Finally, restart Ghost so that the changes will take effect</li>
+            </ul>
 
             <p><strong>Additionally</strong>, <a href="http://www.howtoinstallghost.com/how-to-update-ghost/">howtoinstallghost.com</a> also has instructions for upgrading Ghost on linux servers.</p>
 
-            <h2 id="digitalocean">How to update a DigitalOcean Droplet</h2>
+            <h3 id="digitalocean">How to update a DigitalOcean Droplet</h3>
 
-            <p class="note"><strong>Warning:</strong> You should always perform a backup before upgrading. Read the <a href="#backing-up">backup instructions</a> before doing anything else!</p>
+            <p class="note"><strong>Back-it-up!</strong> Always perform a backup before upgrading. Read the <a href="#backing-up">backup instructions</a> first!</p>
 
             <ul>
             <li>First you'll need to find out the URL of the latest Ghost version. It should be something like <code>http://ghost.org/zip/ghost-latest.zip</code>.</li>
