--- a/installation/upgrading.html
+++ b/installation/upgrading.html
@@ -113,6 +113,12 @@ next_section: troubleshooting
             </ul>
 
 
+            <h2 id="upgrading-node">How to upgrade Node.js to the latest version</h2>
+
+            <p>If you originally installed Node.js from the <a href="nodejs.org">Node.js</a> website, you can upgrade Node.js to the latest version by downloading and running the latest installer. This will replace your current version with the new version.</p>
+            <p>If you are on Ubuntu, or another linux distribution which uses <code>apt-get</code>, the command to upgrade node is the same as to install: <code>sudo apt-get install nodejs</code>.</p>
+
+
             {% if page.next_section || page.prev_section %}
                 {% include pagination.html %}
             {% endif %}
