add lang property for all files, ande some translation

--- a/cn/index.html
+++ b/cn/index.html
@@ -1,7 +1,8 @@
 ---
+lang: cn
 layout: default
-meta_title: The Ghost Guide - Getting Started with Ghost
-meta_description: An in depth guide for working with Ghost. Install, set up, usage, and how to make themes and plugins.
+meta_title: Ghost使用指南 - Ghost使用入门
+meta_description: Ghost使用完全指南。包括安装、使用以及如何制作主题和插件。
 ---
 
 <div id="fb-root"></div>
@@ -16,10 +17,10 @@ meta_description: An in depth guide for working with Ghost. Install, set up, usa
 
 <div class="bs-masthead">
   <div class="container">
-    <h1>The Ghost Guide</h1>
-    <p class="lead">Everything you need to know to set up a blog with Ghost.</p>
+    <h1>Ghost使用指南</h1>
+    <p class="lead">这里包含了完整的Ghost使用指南中文文档。</p>
     <p>
-      <a href="{{ site.url }}/installation" class="btn btn-success btn-large">Click Here to Get Started</a>
+      <a href="{{ site.url }}/installation" class="btn btn-success btn-large">开始Ghost之旅吧</a>
     </p>
   </div>
 </div>
