--- a/cn/mail/index.html
+++ b/cn/mail/index.html
@@ -1,4 +1,5 @@
 ---
+lang: cn
 layout: default
 meta_title: Ghost Mail Configuration - Ghost Docs
 meta_description: How to configure your email server and send emails with the Ghost blogging platform. Everything you need to know.
