--- a/cn/themes/index.html
+++ b/cn/themes/index.html
@@ -1,4 +1,5 @@
 ---
+lang: cn
 layout: default
 meta_title: How to Make Ghost Themes - Ghost Docs
 meta_description: An in depth guide to making themes for the Ghost blogging platform. Everything you need to know to build themes for Ghost.
