--- a/cn/usage/configuration.html
+++ b/cn/usage/configuration.html
@@ -1,4 +1,5 @@
 ---
+lang: cn
 layout: default
 meta_title: How to Use Ghost - Ghost Docs
 meta_description: An in depth guide to using the Ghost blogging platform. Got Ghost but not sure how to get going? Start here!
