--- a/cn/index.html
+++ b/cn/index.html
@@ -1,7 +1,7 @@
 ---
 lang: cn
 layout: default
-meta_title: Ghost使用指南 - Ghost使用入门
+meta_title: Ghost使用指南 - Ghost中文文档
 meta_description: Ghost使用完全指南。包括安装、使用以及如何制作主题和插件。
 ---
 
