--- a/cn/installation/index.html
+++ b/cn/installation/index.html
@@ -30,7 +30,7 @@ next_section: mac
             <p><a href="http://nodejs.org">Node.js</a> provides us with the ability to write JavaScript on server. In the past JavaScript has only existed in the browser, and a second programming language, such as PHP, was required to do server side programming. Having a web application consist of a single programming language is a great benefit, and this also makes Node.js accessible to developers who might have traditionally stayed on the client side.</p>
 
             <p>The way that <a href="http://nodejs.org">Node.js</a> makes this possible, is by wrapping up the JavaScript engine from Google's Chrome browser and making it installable anywhere. This means that you can get Ghost installed on your computer to try it out very quickly and easily.
-                The following sections detail how to install Ghost locally on <a href="/installation/mac/">Mac</a>,  <a href="/installation/window/">Windows</a> or <a href="/installation/linux/">Linux</a> or alternatively will help you get Ghost deployed on a <a href="/installation/deploy">server or hosting</a> account.</p>
+                The following sections detail how to install Ghost locally on <a href="{% if page.lang %}/{{ page.lang }}{% endif %}/installation/mac/">Mac</a>,  <a href="{% if page.lang %}/{{ page.lang }}{% endif %}/installation/window/">Windows</a> or <a href="{% if page.lang %}/{{ page.lang }}{% endif %}/installation/linux/">Linux</a> or alternatively will help you get Ghost deployed on a <a href="{% if page.lang %}/{{ page.lang }}{% endif %}/installation/deploy">server or hosting</a> account.</p>
 
 
             <h3>Getting started</h3>
@@ -40,20 +40,20 @@ next_section: mac
             <p>I want to install Ghost on:</p>
 
             <div class="text-center install-ghost">
-                <a href="/installation/mac/" class="btn btn-success btn-large">Mac</a>
-                <a href="/installation/windows/" class="btn btn-success btn-large">Windows</a>
-                <a href="/installation/linux/" class="btn btn-success btn-large">Linux</a>
+                <a href="{% if page.lang %}/{{ page.lang }}{% endif %}/installation/mac/" class="btn btn-success btn-large">Mac</a>
+                <a href="{% if page.lang %}/{{ page.lang }}{% endif %}/installation/windows/" class="btn btn-success btn-large">Windows</a>
+                <a href="{% if page.lang %}/{{ page.lang }}{% endif %}/installation/linux/" class="btn btn-success btn-large">Linux</a>
             </div>
 
             <p>If you've already decided to deploy Ghost to your server or hosting account, that's great news! The following documentation will walk you through various options for deploying Ghost, from manual setups, to one-click installers.</p>
 
             <div class="text-center install-ghost">
-               <a href="/installation/deploy/" class="btn btn-success btn-large">Get Ghost Live</a>
+               <a href="{% if page.lang %}/{{ page.lang }}{% endif %}/installation/deploy/" class="btn btn-success btn-large">Get Ghost Live</a>
             </div>
 
 
-            <p>请记住，Ghost还非常新，它的开发小组还在非常努力的实现新的功能。如果你需要升级Ghost到最新版本，请参考<a href="/installation/upgrading/">Ghost升级文档</a>。
-                如果入到任何问题，请参考<a href="/installation/troubleshooting/">除错指南</a>，如果你的问题还不能得到解决，请在<a href="http://ghost.org/forum">Ghost论坛</a>提问，这里聚集了Ghost核心小组的成员和社区成员，他们会非常乐意帮你解决问题。</p>
+            <p>请记住，Ghost还非常新，它的开发小组还在非常努力的实现新的功能。如果你需要升级Ghost到最新版本，请参考<a href="{% if page.lang %}/{{ page.lang }}{% endif %}/installation/upgrading/">Ghost升级文档</a>。
+                如果入到任何问题，请参考<a href="{% if page.lang %}/{{ page.lang }}{% endif %}/installation/troubleshooting/">除错指南</a>，如果你的问题还不能得到解决，请在<a href="http://ghost.org/forum">Ghost论坛</a>提问，这里聚集了Ghost核心小组的成员和社区成员，他们会非常乐意帮你解决问题。</p>
 
             {% if page.next_section || page.prev_section %}
                {% include pagination.html %}
