--- a/es/installation/windows.html
+++ b/es/installation/windows.html
@@ -1,11 +1,11 @@
 ---
-lang: cn
+lang: es
 layout: default
 meta_title: How to Install Ghost on Your Server - Ghost Docs
 meta_description: Everything you need to get the Ghost blogging platform up and running on your local or remote environement.
 heading: Installing Ghost &amp; Getting Started
 subheading: The first steps to setting up your new blog for the first time.
-permalink: /cn/installation/windows/
+permalink: /es/installation/windows/
 chapter: installation
 prev_section: mac
 next_section: linux
