--- a/es/usage/index.html
+++ b/es/usage/index.html
@@ -1,131 +1,59 @@
 ---
 lang: es
 layout: default
-meta_title: Using Ghost
+meta_title: How to Use Ghost - Ghost Docs
+meta_description: An in depth guide to using the Ghost blogging platform. Got Ghost but not sure how to get going? Start here!
 heading: Using Ghost
+subheading: Finding your way around, and getting set up the way you want
+chapter: usage
+next_section: configuration
 ---
 
 <div class="container">
     <div class="row">
-        <aside id="sidebar" class="col-lg-3">
-            <nav class="bs-sidebar">
-                <ul class="nav bs-sidenav">
 
-                    <li class="active">
-                        <ul class="nav">
-                            <li class="active"><a href="#running-ghost">Running Ghost</a></li>
-                            <li><a href="#config-ghost">Configuring Ghost</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-        </aside>
+        {% include subnav/usage.html %}
+
         <section id="content" class="col-lg-9">
-            <h2 id="running-ghost">Running Ghost</h2>
 
-            <ol>
-                <li>Go to <code>&lt;your URL&gt;/ghost/signup/</code></li>
-                <li>Enter your user email and password</li>
-                <li>Click "Login"</li>
-            </ol>
+            <h2 id="overview">Overview</h2>
 
+            <p>Hopefully at this point you've got Ghost installed and running, and you're ready to get blogging. The following sections are going to walk you through absolutely everything you need to know about Ghost, so that you are familiar with everything, and set up exactly how you want to be.</p>
 
-            <p>You should now be logged into your Admin control.</p>
+            <h3>First run</h3>
 
-            <h2 id="config-ghost">Configuring Ghost</h2>
+            <p>If you are running Ghost for the very first time, then you need to create your admin user account. Navigate to your new blog in your favourite browser, and then change the URL to <code class="path">&lt;your URL&gt;/ghost/signup/</code>. You should see a screen just like this one:</p>
 
-            <p>Go to <code>&lt;your URL&gt;/ghost/settings/</code>.</p>
-            <p>After you are finished adjusting the settings the "Save" button <em>must</em> be pressed, this will save your changes.</p>
-            <p>You can check your changes by visiting the Blog URL.</p>
-
-            <h3>Blog Settings (<code>/general/</code>)</h3>
-
-            <p>These are the Blog specific settings.</p>
+            <p><img src="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/ghost-signup.png" /></p>
 
             <ul>
-                <li><strong>Blog Title</strong>: Changes your Blog's title. Theme reference <code>@blog.title</code>.</li>
-                <li><strong>Blog Description</strong>: Changes your Blog's description. Theme reference <code>@blog.description</code>.</li>
-                <li><strong>Blog Logo</strong>: Upload a Logo for your blog in either '.png', '.jpg' or '.gif'. Theme reference <code>@blog.logo</code>.</li>
-                <li><strong>Blog Cover</strong>: Upload your blog cover image in either '.png', '.jpg' or '.gif'. Theme reference <code>@blog.cover</code>.</li>
-                <li><strong>Email Address</strong>: This is the email admin notifications are sent too. It <em>must</em> be a valid email.</li>
-                <li><strong>Posts per page</strong>: This is how many posts are displayed per page. This should be a numeric value.</li>
-                <li><strong>Theme</strong>: This will list all the themes in your <code>content/themes</code> directory. Selecting one from the dropdown will change your blog's look.
-
+                <li>Fill in your <strong>Full Name</strong> as the name you want to appear as the author of blog posts.</li>
+                <li>Then enter your <strong>Email Address</strong> - make sure it's valid, and carefully enter a sensible <strong>Password</strong> (it needs to be at least 8 characters long).</li>
+                <li>Hit the big blue <strong>Sign Up</strong> button, and you will be logged in to your blog.</li>
             </ul>
 
-            <h3>User Settings (<code>/user/</code>)</h3>
+            <p>That's it! You can now start writing blog posts.</p>
 
-            <p>These are the settings that control your user / author profile.</p>
+            <h4>Messages</h4>
 
-            <ul>
-                <li><strong>Your Name</strong>: This is your name that will be used to credit you when you publish a post. Theme reference (post) <code>author.name</code>.</li>
-                <li><strong>Cover Image</strong>: Your profile cover image is uploaded here, in either '.png', '.jpg' or '.gif' format. Theme reference (post) <code>author.cover</code>.</li>
-                <li><strong>Display Picture</strong>: This is where you upload your personal display picture, in either '.png', '.jpg' or '.gif' format. Theme reference (post) <code>author.image</code>.</li>
-                <li><strong>Email Address</strong>: This email will be available as your public email and also where you wish to receive notifications. Theme reference (post) <code>author.email</code>.</li>
-                <li><strong>Location</strong>: This should be your current location. Theme reference (post) <code>author.location</code>.</li>
-                <li><strong>Website</strong>: This is your personal website URL or even one of your social network URLs. Theme reference (post) <code>author.website</code>.</li>
-                <li><strong>Bio</strong>: Your bio is where you can enter a 200 charater or less description about yourself. Theme reference (post) <code>author.bio</code>.</li>
-            </ul>
+            <p>On your first run of Ghost you should see a blue info message at the top of the screen that looks a little like this:</p>
 
-            <h4>Changing your password</h4>
+            <p><img src="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/first-run-info.png" /></p>
 
-            <ol>
-                <li>Fill out the input boxes with the appropriate password (current / new password).</li>
-                <li>Now click <strong>Change Password</strong>.</li>
-            </ol>
+            <p>It let's you know some information about the way Ghost is configured, such as which environment you've started it in, and what you've got your URL set to.
+                Jump to the <a href="/usage/configuration/">configuration</a> section to find out more about environments, and how to configure Ghost.
+                You won't be able to get rid of this message until you log in (this is a bug we're working on), but once you have, and you're familiar with the info, close it by pressing the x. It won't appear again.</p>
 
-            <p><strong>Note:</strong> For your password to change you must click the "Change Password" button, the "Save" button does not change the password.</p>
+            <p>You may also see an orange warning message with regard to email:</p>
 
+            <p><img src="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/email-warning.png" /></p>
 
-            <h1>Using Ghost</h1>
+            <p>This isn't critical to setting up your blog so you can get started writing, but it is a good idea to mosey on over to the <a href="/mail">email documentation</a> at some point, and learn about configuring Ghost to send email.
+            This is currently only used to send you a reset email if you forget your password. Not important for blogging, but really useful if you ever need it!</p>
 
-            <h3>Writing a Post</h3>
-
-            <ol>
-                <li>Go to <code>&lt;your URL&gt;/ghost/editor/</code></li>
-                <li>Enter a Post Title</li>
-                <li>Enter your post content using <a href="http://daringfireball.net/projects/markdown/syntax">Markdown</a></li>
-                <li>Save your Post as "Draft" by clicking the 'Save Draft' button, or press Ctrl / CMD + S.</li>
-                <img src="http://f.cl.ly/items/2l2h0N3u0c3Z3b2p1e1f/draft.gif" />
-            </ol>
-
-
-            <h3>Publish a Post</h3>
-
-            <p>Once you have written your Post.</p>
-
-            <ol>
-                <li>Click the arrow next to "Save Draft"</li>
-                <li>Select "Publish Now"</li>
-                <img src="http://f.cl.ly/items/0z3R223D0o2v0w334111/publish.gif" />
-            </ol>
-
-            <p>This will set the save state to 'Publish Now' and the button will turn Red, once you press this button the Post will be published. To return the Post to a 'Draft' state;</p>
-
-            <ol>
-                <li>return to the 'Save Menu'.</li>
-                <li>Select "Unpublish".</li>
-                <li>Click the "Unpublish" button.</li>
-            </ol>
-
-
-            <p>To change the "Slug" or "Publish date" of a post once published;</p>
-
-            <ol>
-                <li>Click the 'Settings' icon.</li>
-                <li>Proceed to update the information as required (this will be saved automatically when you naviagte away).</li>
-                <img style="max-width:100%;" src="http://f.cl.ly/items/3q172h1y3Z0m0N2f121D/updateSlug.gif">
-            </ol>
-
-
-            <h3>Delete a Post</h3>
-
-            <ol>
-                <li>Navigate to the 'Settings' icon in either the 'Content' page or 'Editor' page.</li>
-                <li>Click "Delete".</li>
-                <li>Accept the Modal</li>
-                <img width="100%" src="http://f.cl.ly/items/3G2b3d443i1T1j0p433F/deletePost.gif" />
-            </ol>
+            {% if page.next_section || page.prev_section %}
+                {% include pagination.html %}
+            {% endif %}
         </section>
     </div>
 </div>
