--- a/es/usage/settings.html
+++ b/es/usage/settings.html
@@ -1,12 +1,12 @@
 ---
-lang: cn
+lang: es
 layout: default
 meta_title: How to Use Ghost - Ghost Docs
 meta_description: An in depth guide to using the Ghost blogging platform. Got Ghost but not sure how to get going? Start here!
 heading: Using Ghost
 subheading: Finding your way around, and getting set up the way you want
 chapter: usage
-permalink: /cn/usage/settings/
+permalink: /es/usage/settings/
 prev_section: configuration
 next_section: managing
 ---
