Convert English docs to markdown
- Issue #1180: All English docs are written in markdown now.
  HTML is only used when it is required for theming or for elements that have no markdown counterpart.

- Fix a bug where pagination is not shown
  The pagination used the "||" operator that does not exist in Liquid, "or" does.

- Markdown parser set to Redcarpet
  The default Markdown parser Maruku is not able to build the documentation and throws an error.

--- a/cn/installation/deploy.html
+++ b/cn/installation/deploy.html
@@ -323,7 +323,7 @@ esac
 
             <p>Documentation on using nginx as a reverse proxy on their way.</p>
 
-            {% if page.next_section || page.prev_section %}
+            {% if page.next_section or page.prev_section %}
                 {% include pagination.html %}
             {% endif %}
         </section>
