--- a/cn/usage/configuration.html
+++ b/cn/usage/configuration.html
@@ -64,7 +64,7 @@ next_section: settings
 
 
 
-            {% if page.next_section || page.prev_section %}
+            {% if page.next_section or page.prev_section %}
                 {% include pagination.html %}
             {% endif %}
         </section>
