--- a/cn/usage/managing.html
+++ b/cn/usage/managing.html
@@ -66,7 +66,7 @@ next_section: writing
                 <img width="100%" src="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/deletePost.gif" />
             </ol>
 
-            {% if page.next_section || page.prev_section %}
+            {% if page.next_section or page.prev_section %}
                 {% include pagination.html %}
             {% endif %}
         </section>
