--- a/cn/installation/troubleshooting.html
+++ b/cn/installation/troubleshooting.html
@@ -51,7 +51,7 @@ prev_section: upgrading
                 </dd>
             </dl>
 
-            {% if page.next_section || page.prev_section %}
+            {% if page.next_section or page.prev_section %}
                 {% include pagination.html %}
             {% endif %}
         </section>
