--- a/es/usage/faq.html
+++ b/es/usage/faq.html
@@ -31,7 +31,7 @@ prev_section: writing
             <br />
 
 
-            {% if page.next_section || page.prev_section %}
+            {% if page.next_section or page.prev_section %}
                 {% include pagination.html %}
             {% endif %}
         </section>
