--- a/de/index.html
+++ b/de/index.html
@@ -1,7 +1,7 @@
 ---
 lang: de
 layout: default
-meta_title: Erste Schritt mit Ghost
+meta_title: Erste Schritte mit Ghost
 ---
 
 <div id="fb-root"></div>
@@ -17,7 +17,7 @@ meta_title: Erste Schritt mit Ghost
 <div class="bs-masthead">
   <div class="container">
     <h1>Das Ghost-Handbuch auf Deutsch</h1>
-    <p class="lead">Alles was man wissen muß um mit Ghost ein Blog aufzusetzen.</p>
+    <p class="lead">Alles was man wissen muss um mit Ghost ein Blog aufzusetzen.</p>
     <p>
       <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">Hier klicken für die ersten Schritte mit Ghost auf Deutsch</a>
     </p>
