--- a/de/installation/index.html
+++ b/de/installation/index.html
@@ -4,7 +4,7 @@ layout: default
 meta_title: Installation von Ghost auf dem eigenen Server - Ghost-Dokumentation
 meta_description: Alles Wissenswerte um die Ghost Blogging Plattform in der eigenen lokalen oder entfernten Umgebung zum Laufen zu bekommen.
 heading: Ghost Installation &amp; Erste Schritte
-subheading: Die ersten Schritte beim erstmaligen Aufsetzen des eigenen neuen Blog.
+subheading: Die ersten Schritte beim erstmaligen Aufsetzen des eigenen neuen Blogs.
 chapter: Installation
 next_section: Mac
 ---
@@ -17,24 +17,23 @@ next_section: Mac
 
             <h2 id="overview">Überblick</h2>
 
-            <p>Die Ghost-Dokumentation ist ein Arbeit im Fluß, welche ständig erneuert und verbessert wird. Wenn Sie irgendwo nicht weiterkommen oder Vorschläge für Verbesserungen haben, lassen Sie es uns bitte wissen.</p>
+            <p>Die Ghost-Dokumentation ist ein Projekt, welches ständig erneuert und verbessert wird. Wenn Sie irgendwo nicht weiterkommen oder Vorschläge für Verbesserungen haben, lassen Sie es uns bitte wissen.</p>
 
-            <p>Ghost basier auf <a href="http://nodejs.org">Node.js</a> und benötigt die Version <code>0.10.*</code> (letzte stabile Version).</p>
+            <p>Ghost basiert auf <a href="http://nodejs.org">Node.js</a> und benötigt die Version <code>0.10.*</code> (letzte stabile Version).</p>
 
             <p>Ghost kann problemlos auf Ihrem lokalen Computer betrieben werden, Sie müssen allerdings zuvor Node.js installiert haben.</p>
 
             <h3>Was ist Node.js?</h3>
 
             <p><a href="http://nodejs.org">Node.js</a> ist eine moderne Plattform zur Erstellung schneller, skalierbarer und effizienter Web-Anwendungen.
-            Über die letzten 20 Jahre hinweg hat sich das Web von einer Sammlung statischer Seite hin zu einer Plattform entwickelt, welche die Unterstützung für komplexe Web-Anwendung wie Gmail und Facebook anbietet.
-            JavaScript ist die Programmiersprache, welche diese Weiterentwicklung ermöglicht hat.
+            Über die letzten 20 Jahre hinweg hat sich das Web von einer Sammlung statischer Seite hin zu einer Plattform entwickelt, welche die Entwicklung komplexe Web-Anwendung wie Gmail und Facebook unterstützt. JavaScript ist die Programmiersprache, welche diese Weiterentwicklung ermöglicht hat.
 
-            <p><a href="http://nodejs.org">Node.js</a> ermöglicht es auf dem Server JavaScript zu verwenden. In der Vergangenheit existierte JavaScript nur im Browser und es wurde eine weitere Programmiersprache, zum Beispiel PHP, für die Server-seitige Programmierung benötigt. Die Möglichkeit, eine Web-Applikation mit eine einzigen Programmiersprache zu schreiben ist von grossem Vorteil und das macht Node.js für alle Entwickler interessant, die sich bisher traditionell nur auf der Client-Seite bewegt haben.</p>
+            <p><a href="http://nodejs.org">Node.js</a> ermöglicht es auf dem Server JavaScript zu verwenden. In der Vergangenheit existierte JavaScript nur im Browser und es wurde eine weitere Programmiersprache, zum Beispiel PHP, für die Server-seitige Programmierung benötigt. Die Möglichkeit, eine Web-Applikation mit einer einzigen Programmiersprache zu schreiben ist von grossem Vorteil und das macht Node.js für alle Entwickler interessant, die sich bisher traditionell nur auf der Client-Seite bewegt haben.</p>
 
-            <p>Node.js ermöglicht dies dadurch, dass sie eine Hülle um die JavaScript-Engine des Chrome-Browser von Google erstellt und damit überall installierbar macht. Dies bedeutet das Sie Ghost auf Ihrem Computer installieren können um es sehr schell und einfach ausprobieren zu können. Die folgenden Abschnitte zeigen im Detail wie Sie Ghost lokal auf <a href="{% if page.lang %}/{{ page.lang }}{% endif %}/installation/mac/">Mac</a>,  <a href="{% if page.lang %}/{{ page.lang }}{% endif %}/installation/windows/">Windows</a> oder <a href="{% if page.lang %}/{{ page.lang }}{% endif %}/installation/linux/">Linux</a> oder alternativ auf einem <a href="{% if page.lang %}/{{ page.lang }}{% endif %}/installation/deploy">Server oder Hosting-Dienst</a>.</p>
+            <p>Erreicht wird dies, in dem Node.js eine Hülle um die JavaScript-Engine des Chrome-Browser von Google erstellt und diese damit portabel und überall installierbar macht. Damit können Sie Ghost sehr schnell auf Ihrem Computer installieren und einfach ausprobieren. Die folgenden Abschnitte zeigen im Detail wie Sie Ghost lokal auf Ihrem Computer mit <a href="{% if page.lang %}/{{ page.lang }}{% endif %}/installation/mac/">Mac</a>,  <a href="{% if page.lang %}/{{ page.lang }}{% endif %}/installation/windows/">Windows</a> oder <a href="{% if page.lang %}/{{ page.lang }}{% endif %}/installation/linux/">Linux</a> oder alternativ auf einem <a href="{% if page.lang %}/{{ page.lang }}{% endif %}/installation/deploy">Server oder Hosting-Dienst</a> installieren können.</p>
 
 
-            <h3>Erst Schritte</h3>
+            <h3>Erste Schritte</h3>
 
             <p>Wenn Sie sich nicht für die folgenden Instruktionen zur manuellen Installation von Node.js and Ghost erwärmen können, die großartigen Leute von <a href="http://bitnami.com/">BitNami</a> stellen <a href="http://bitnami.com/stack/ghost">Ghost-Installationsprogramme</a> für alle wichtigen Plattformen zur Verfügung.</p>
 
