--- a/zh/mail/index.html
+++ b/zh/mail/index.html
@@ -1,5 +1,5 @@
 ---
-lang: cn
+lang: zh
 layout: default
 meta_title: Ghost Mail Configuration - Ghost Docs
 meta_description: How to configure your email server and send emails with the Ghost blogging platform. Everything you need to know.
