--- a/zh/installation/index.html
+++ b/zh/installation/index.html
@@ -1,5 +1,5 @@
 ---
-lang: cn
+lang: zh
 layout: default
 meta_title: 如何在服务器上安装Ghost - Ghost中文文档
 meta_description: 这里详细讲述如何在你本地或远程环境中安装Ghost博客平台。
@@ -30,7 +30,7 @@ next_section: mac
             <p><a href="http://nodejs.org">Node.js</a>让我们具有了开发服务器端JavaScript程序的能力。而在以前，JavaScript只能在浏览器上运行，如果要开发服务器端的程序，就要使用PHP一类的编程语言了。如果能够用同一种开发语言来完成web应用的开发，这将是多么棒！并且，Node.js还赋予了前端开发工程师更大的能力。</p>
 
             <p><a href="http://nodejs.org">Node.js</a>让这一切变为可能，其原理是对Google Chrome浏览器所用的JavaScript引擎进行了包装，让它能够跨平台运行。也就是说，你能在自己的电脑上非常快速的安装Ghost并让它非常快捷、方便的跑起来。
-                接下来我们详细讲解如何在<a href="{% if page.lang %}/{{ page.lang }}{% endif %}/installation/mac/">Mac</a>、<a href="{% if page.lang %}/{{ page.lang }}{% endif %}/installation/window/">Windows</a>或<a href="{% if page.lang %}/{{ page.lang }}{% endif %}/installation/linux/">Linux</a>上安装Ghost，另外还介绍了如何在<a href="/cn/installation/deploy">服务器或托管空间</a>上部署Ghost。</p>
+                接下来我们详细讲解如何在<a href="{% if page.lang %}/{{ page.lang }}{% endif %}/installation/mac/">Mac</a>、<a href="{% if page.lang %}/{{ page.lang }}{% endif %}/installation/window/">Windows</a>或<a href="{% if page.lang %}/{{ page.lang }}{% endif %}/installation/linux/">Linux</a>上安装Ghost，另外还介绍了如何在<a href="{% if page.lang %}/{{ page.lang }}{% endif %}/installation/deploy">服务器或托管空间</a>上部署Ghost。</p>
 
 
             <h3>起步</h3>
