Fixing timeago docs

--- a/cn/themes/index.html
+++ b/cn/themes/index.html
@@ -258,7 +258,7 @@ subheading: Get started creating your own themes for Ghost
             <p>Or you can pass it a date and the timeago flag:</p>
 
 <pre>// outputs something like '5 mins ago'
-{{date published_at timeago}}</pre>
+{{date published_at timeago="true"}}</pre>
 
             <p>If you call <code>{{date}}</code> without a format, it will default to “MMM Do, YYYY”.</p>
             <p>If you call <code>{{date}}</code> in the context of a post without telling it which date to display, it will default to <code>published_at</code>.</p>
