Renaming pt_BR to br and some finished pages

--- a/br/index.html
+++ b/br/index.html
@@ -1,7 +1,7 @@
 ---
-lang: es
+lang: br
 layout: default
-meta_title: Getting Started with Ghost
+meta_title: Iniciando com Ghost
 ---
 
 <div id="fb-root"></div>
@@ -16,10 +16,10 @@ meta_title: Getting Started with Ghost
 
 <div class="bs-masthead">
   <div class="container">
-    <h1>The Ghost Guide in Spanish</h1>
-    <p class="lead">Everything you need to know to set up a blog with Ghost in Spanish.</p>
+    <h1>O Guia do Ghost</h1>
+    <p class="lead">Tudo o que você precisa saber para configurar seu Blog com Ghost.</p>
     <p>
-      <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">Click Here to Get Started in Spanish</a>
+      <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">Clique aqui para começar</a>
     </p>
   </div>
 </div>
