--- a/br/usage/configuration.html
+++ b/br/usage/configuration.html
@@ -1,5 +1,5 @@
 ---
-lang: es
+lang: br
 layout: default
 meta_title: How to Use Ghost - Ghost Docs
 meta_description: An in depth guide to using the Ghost blogging platform. Got Ghost but not sure how to get going? Start here!
@@ -26,7 +26,7 @@ next_section: settings
 
             <p>To configure your Ghost URL, mail or database settings, open <code>config.js</code> in your favourite editor, and start changing the settings for your desired environment. If environments aren't something you've come across yet, read the documentation below.
 
-            
+
 
             <h2 id="environments">About Environments</h2>
 
