--- a/br/usage/writing.html
+++ b/br/usage/writing.html
@@ -1,5 +1,5 @@
 ---
-lang: es
+lang: br
 layout: default
 meta_title: How to Use Ghost - Ghost Docs
 meta_description: An in depth guide to using the Ghost blogging platform. Got Ghost but not sure how to get going? Start here!
@@ -23,7 +23,7 @@ next_section: faq
             <p>Blog posts in Ghost are written using Markdown. Markdown is a minimal syntax for marking up documents with formatting using punctuation and special characters. It's syntax is intended to prevent interuptions to the flow of writing, allowing you to focus on your content, rather than how it looks.</p>
 
             <h3 id="markdown">Markdown Guide</h3>
-            
+
             <p><a href="http://daringfireball.net/projects/markdown/">Markdown</a> is a markup language designed to improve the efficiency in which you can write, whilst keep the writing as easy-to-read as possible.</p>
 
             <p>Ghost uses all the default Markdown shortcuts plus a few of our own additions. The full list of shortcuts is listed below.</p>
@@ -43,7 +43,7 @@ next_section: faq
 
 
             <h4> Text Styling</h4>
-            
+
             <ul>
             <li>Links : <code>[Title](URL)</code></li>
             <li>Bold : <code>**Bold**</code></li>
