Renaming language code from br to pt-BR

--- a/pt-BR/installation/index.html
+++ b/pt-BR/installation/index.html
@@ -1,5 +1,5 @@
 ---
-lang: br
+lang: pt-BR
 layout: default
 meta_title: Como instalar o Ghost no seu Servidor - Ghost Docs
 meta_description: Tudo o que você precisa saber para colocar sua plataforma Ghost funcionando no seu ambiente local, ou em um ambiente remoto.
