--- a/pt-BR/installation/mac.html
+++ b/pt-BR/installation/mac.html
@@ -1,11 +1,11 @@
 ---
-lang: br
+lang: pt-BR
 layout: default
 meta_title: Como instalar o Ghost no seu Servidor - Ghost Docs
 meta_description: Tudo o que você precisa saber para colocar sua plataforma Ghost funcionando no seu ambiente local, ou em um ambiente remoto.
 heading: Instalando o Ghost &amp; Começando
 subheading: Os primeiros passos para configurar o seu Blog pela primeira vez.
-permalink: /br/installation/mac/
+permalink: /pt-BR/installation/mac/
 chapter: installation
 prev_section: installation
 next_section: windows
