--- a/pt-BR/installation/upgrading.html
+++ b/pt-BR/installation/upgrading.html
@@ -1,11 +1,11 @@
 ---
-lang: br
+lang: pt-BR
 layout: default
 meta_title: How to Install Ghost on Your Server - Ghost Docs
 meta_description: Everything you need to get the Ghost blogging platform up and running on your local or remote environement.
 heading: Installing Ghost &amp; Getting Started
 subheading: The first steps to setting up your new blog for the first time.
-permalink: /br/installation/upgrading/
+permalink: /pt-BR/installation/upgrading/
 chapter: installation
 prev_section: deploy
 next_section: troubleshooting
