--- a/pt-BR/usage/faq.html
+++ b/pt-BR/usage/faq.html
@@ -1,12 +1,12 @@
 ---
-lang: br
+lang: pt-BR
 layout: default
 meta_title: How to Use Ghost - Ghost Docs
 meta_description: An in depth guide to using the Ghost blogging platform. Got Ghost but not sure how to get going? Start here!
 heading: Using Ghost
 subheading: Finding your way around, and getting set up the way you want
 chapter: usage
-permalink: /br/usage/faq/
+permalink: /pt-BR/usage/faq/
 prev_section: writing
 ---
 
