--- a/pt-BR/usage/index.html
+++ b/pt-BR/usage/index.html
@@ -1,5 +1,5 @@
 ---
-lang: br
+lang: pt-BR
 layout: default
 meta_title: How to Use Ghost - Ghost Docs
 meta_description: An in depth guide to using the Ghost blogging platform. Got Ghost but not sure how to get going? Start here!
