Translate Installation & Mail to German and apply updates

--- a/de/index.html
+++ b/de/index.html
@@ -16,10 +16,10 @@ meta_title: Erste Schritte mit Ghost
 
 <div class="bs-masthead">
   <div class="container">
-    <h1>Das Ghost-Handbuch auf Deutsch</h1>
-    <p class="lead">Alles was man wissen muss um mit Ghost ein Blog aufzusetzen.</p>
+    <h1>Das Ghost-Handbuch</h1>
+    <p class="lead">Alles was du wissen musst um mit Ghost ein Blog aufzusetzen.</p>
     <p>
-      <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">Hier klicken für die ersten Schritte mit Ghost auf Deutsch</a>
+      <a href="{{ site.url }}/{{page.lang}}/installation/" class="btn btn-success btn-large">Klicke hier für die ersten Schritte</a>
     </p>
   </div>
 </div>
