Change example_translation to da

--- a/da/index.html
+++ b/da/index.html
@@ -1,5 +1,5 @@
 ---
-lang: example_translation
+lang: da
 layout: default
 meta_title: Getting Started with Ghost
 ---
@@ -9,7 +9,7 @@ meta_title: Getting Started with Ghost
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=596756540369391";
+  js.src = "//connect.facebook.net/da_DK/all.js#xfbml=1&appId=596756540369391";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
