--- a/pt-BR/usage/configuration.html
+++ b/pt-BR/usage/configuration.html
@@ -1,9 +1,9 @@
 ---
 lang: pt-BR
 layout: default
-meta_title: How to Use Ghost - Ghost Docs
+meta_title: Como Usar o Ghost - Ghost Docs
 meta_description: An in depth guide to using the Ghost blogging platform. Got Ghost but not sure how to get going? Start here!
-heading: Using Ghost
+heading: Usando o Ghost
 subheading: Finding your way around, and getting set up the way you want
 chapter: usage
 permalink: /pt-BR/usage/configuration/
@@ -18,7 +18,7 @@ next_section: settings
 
         <section id="content" class="col-lg-9">
 
-            <h2 id="configuration">Configuring Ghost</h2>
+            <h2 id="configuration">Configurando o Ghost</h2>
 
             <p>After you run Ghost for the first time, you'll find a file called <code>config.js</code> in the root directory of Ghost, along with the <code>index.js</code>. This file allows you to set environment level configuration for things like your URL, database, and mail settings.</p>
 
