--- a/pt-BR/usage/configuration.html
+++ b/pt-BR/usage/configuration.html
@@ -2,9 +2,9 @@
 lang: pt-BR
 layout: default
 meta_title: Como Usar o Ghost - Ghost Docs
-meta_description: An in depth guide to using the Ghost blogging platform. Got Ghost but not sure how to get going? Start here!
+meta_description: Um guia mais a fundo para usar a plataforma de blog Ghost. Escolheu o Ghost mas não sabe por onde começar? Comece aqui!
 heading: Usando o Ghost
-subheading: Finding your way around, and getting set up the way you want
+subheading: Encontrando seu caminho, e configurando do jeito que você quer
 chapter: usage
 permalink: /pt-BR/usage/configuration/
 prev_section: usage
@@ -20,11 +20,11 @@ next_section: settings
 
             <h2 id="configuration">Configurando o Ghost</h2>
 
-            <p>After you run Ghost for the first time, you'll find a file called <code>config.js</code> in the root directory of Ghost, along with the <code>index.js</code>. This file allows you to set environment level configuration for things like your URL, database, and mail settings.</p>
+            <p>Depois de executar o Ghost pela primeira vez, você vai encontrar um arquivo chamado <code>config.js</code> no diretório raiz do Ghost, juntamente com o <code>index.js</code>. Este arquivo permite que você configure variáveis do ambiente de configuração como sua URL, seu banco de dados e suas configurações de e-mail.</p>
 
-            <p>If you haven't yet run Ghost for the first time, you won't have this file yet. You can create one by copying the <code>config.example.js</code> file - that's what Ghost does when it starts. </p>
+            <p>Se você não executou o Ghost pela primeira vez, você não vai ter esse arquivo ainda. Você pode criá-lo copiando o arquivo <code>config.example.js</code> - é o que o Ghost faz quando é iniciado.</p>
 
-            <p>To configure your Ghost URL, mail or database settings, open <code>config.js</code> in your favourite editor, and start changing the settings for your desired environment. If environments aren't something you've come across yet, read the documentation below.
+            <p>Para configurar a URL, e-mail ou banco de dados do seu Ghost, abra o arquivo <code>config.js</code> no seu editor preferido, e comece mudando as configurações que você deseja para o seu ambiente. Se os ambientes são algo que você não lidou ainda, leia a documentação abaixo.
 
 
 
